--- a/curricula-visualization-tool-user-service/src/main/resources/application.properties
+++ b/curricula-visualization-tool-user-service/src/main/resources/application.properties
@@ -6,6 +6,6 @@ spring.datasource.driver-class-name=org.h2.Driver
 
 spring.datasource.username=userService
 spring.datasource.password=password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
