--- a/curricula-visualization-tool-user-service/src/main/resources/application.properties
+++ b/curricula-visualization-tool-user-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.datasource.password=password
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+logging.level.org.springframework.web=DEBUG
+
